--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8"/>
 </head>
 <body>
+<center><div id="game"><h2>AI Assignment Game by Abhinav Rai & Shubham Jain</h2></div></center>
 <script src = "js/main.js"></script>
-
+<script src = "js/algo.js"></script>
 </body>
 </html>
